--- a/src/dk/easv/ImageViewerWindow.fxml
+++ b/src/dk/easv/ImageViewerWindow.fxml
@@ -48,7 +48,7 @@
                         <Insets />
                      </opaqueInsets>
                   </Label>
-                  <Slider fx:id="sliderSpeed" blockIncrement="1.0" majorTickUnit="1.0" max="4.0" min="1.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="3">
+                  <Slider fx:id="sliderSpeed" blockIncrement="1.0" majorTickUnit="1.0" max="4.0" min="1.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="2.0" GridPane.columnIndex="3">
                      <padding>
                         <Insets left="10.0" />
                      </padding>
